tooling/nargo_cli/tests/snapshots/execution_failure/vector_insert_oob/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed: Index out of bounds, vector has size 0
  ┌─ src/main.nr:9:18
  │
9 │         let s2 = vector.insert(0, 5);
  │                  -------------
  │
  = Call stack:
    1. src/main.nr:9:18

Failed assertion
