tooling/nargo_cli/tests/snapshots/execution_failure/vector_insert_oob/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed
   ┌─ src/main.nr:10:19
   │
10 │         assert_eq(x, y);
   │                   ----
   │
   = Call stack:
     1. src/main.nr:1:4

Error interpreting main function
